--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             var x = prompt("Enter in the password "," ");
             if (x.toLowerCase() == password) {
                 alert("Come right in \n \n You've entered the right password");
-                window.location = "index.html";
+                window.location = "main.html";
                 success = 1;
                 return success;
             } else {
