--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         var success = 0;
         var s = 0;
         function enterpw(){
-            password = "please";
+            password = "261123";
             var x = prompt("Enter in the password "," ");
             if (x.toLowerCase() == password) {
                 alert("Come right in \n \n You've entered the right password");
